manifest/backend/manifest.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: backend
  name: backend
  namespace: expenses-monitor
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: backend
    spec:
      containers:
        - image: ghcr.io/and-mora/expenses-monitor:v0.18.2-backend
          name: backend-java
          resources:
            requests:
              memory: "756Mi"
              cpu: "50m"
            limits:
              memory: "756Mi"
              cpu: "300m"
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8080
            initialDelaySeconds: 180
            failureThreshold: 15
            periodSeconds: 10

          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8080
            initialDelaySeconds: 180
            failureThreshold: 15
            periodSeconds: 10
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            runAsNonRoot: true
            runAsUser: 472
      automountServiceAccountToken: false

---

apiVersion: v1
kind: Service
metadata:
  labels:
    app: backend
  name: backend
  namespace: expenses-monitor
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
    - IPv4
  ipFamilyPolicy: SingleStack
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: backend
  sessionAffinity: None
  type: ClusterIP

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
  generation: 1
  name: backend
  namespace: expenses-monitor
spec:
  ingressClassName: public
  rules:
    - host: api.expmonitor.freeddns.org
      http:
        paths:
          - backend:
              service:
                name: backend
                port:
                  number: 8080
            path: /
            pathType: Prefix
  tls:
    - hosts:
      - api.expmonitor.freeddns.org
      secretName: backend-tls
